# capstone-fw

./: CMakeLists.txt  README.md  west.yml
boards/custom/firepod/: Kconfig  Kconfig.firepod  board.cmake  board.yml  firepod.dts  firepod.yaml  firepod_defconfig  firepod_pinctrl.dtsi
firepod/: CMakeLists.txt  app.overlay  firepod.overlay  prj.conf
firepod/src/: bme688_stubs.c  bme688_stubs.h  i2c_thread.c  i2c_thread.h  lora_thread.c  lora_thread.h  main.c  sensor_thread.c  sensor_thread.h
